rust/mlt-core/tests/snapshots/tag02_roundtrip__strings__dict_column_layout.snap
---
source: mlt-core/tests/tag02_roundtrip.rs
expression: dump_text(&l.encode(cfg_v2()).unwrap())
---
00000000                                                                     | layer[0] (117 B)
00000000  74                                                t                |   size: 116 (varint) - tag + body
00000001  02                                                .                |   tag: 0x02 -> Tag02
00000002  0a 74 65 73 74 5f 6c 61 79 65 72                  .test_layer      |   name: "test_layer"
0000000d  80 20                                             .                |   extent: 4096
0000000f  06                                                .                |   feature_count: 6
00000010  00                                                .                |   layout: 0x00 Points
                                                                             |     └ bit 7 = 0 -> reserved = 0
                                                                             |     └ bits 6-4 = 000 -> shared presence bitfields = 0
                                                                             |     └ bits 3-0 = 0000 -> geometry layout = Points
00000011                                                                     |   geometry (19 B)
00000011                                                                     |     types (4 B)
00000011                                                                     |       header (2 B)
00000011  30                                                0                |         encoding: 0x30 logical=DeltaRle physical=implied
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 6 values from context
                                                                             |           └ bits 6-4 = 011 -> logical = DeltaRle, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 00 -> physical = implied
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000012  02                                                .                |         byte_length: 2
00000013  06 00                                             ..               |       data [Length(VarBinary) Int(DeltaRle(Interleaved { num_rle_values: 6 }))/VarInt, 6 values, 2 B]
                                                                             |         decoded: [0, 0, 0, 0, 0, 0]
00000015                                                                     |     vertices (15 B)
00000015                                                                     |       header (3 B)
00000015  a8                                                .                |         encoding: 0xA8 logical=CwDelta physical=VarInt
                                                                             |           └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |           └ bits 6-4 = 010 -> logical = CwDelta, numbered for a v2 vertex stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000016  0c                                                .                |         num_values: 12
00000017  0c                                                .                |         byte_length: 12
00000018  00 00 02 00 02 00 02 00 02 00 02 00               ............     |       data [Data(Vertex) Vertex(ComponentwiseDelta)/VarInt, 12 values, 12 B]
                                                                             |         decoded: [0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0]
00000024  01                                                .                |   column_count: 1
00000025                                                                     |   columns (80 B)
00000025                                                                     |     column[0] Str "v" (80 B)
00000025  0b                                                .                |       type: 0x0B AllPresent Str
                                                                             |         └ bits 7-4 = 0000 -> presence = AllPresent
                                                                             |         └ bits 3-0 = 1011 -> data type = Str
00000026  01 76                                             .v               |       name: "v"
00000028                                                                     |       codes (8 B)
00000028                                                                     |         header (2 B)
00000028  09                                                .                |           encoding: 0x09 logical=None physical=VarInt
                                                                             |             └ bit 7 = 0 -> has_explicit_count = false -> 6 values from context
                                                                             |             └ bits 6-4 = 000 -> logical = None, numbered for a v2 string column
                                                                             |             └ bits 3-2 = 10 -> physical = VarInt
                                                                             |             └ bits 1-0 = 01 -> string layout = Dict
00000029  06                                                .                |           byte_length: 6
0000002a  00 01 00 01 00 01                                 ......           |         data [Offset(String) Int(None)/VarInt, 6 values, 6 B]
                                                                             |           decoded: [0, 1, 0, 1, 0, 1]
00000030                                                                     |       dict_lengths (5 B)
00000030                                                                     |         header (3 B)
00000030  98                                                .                |           encoding: 0x98 logical=Delta physical=VarInt
                                                                             |             └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |             └ bits 6-4 = 001 -> logical = Delta, numbered for a v2 integer stream
                                                                             |             └ bits 3-2 = 10 -> physical = VarInt
                                                                             |             └ bits 1-0 = 00 -> extension = 0
00000031  02                                                .                |           num_values: 2
00000032  02                                                .                |           byte_length: 2
00000033  3e 00                                             >.               |         data [Length(Dictionary) Int(Delta)/VarInt, 2 values, 2 B]
                                                                             |           decoded: [31, 31]
00000035                                                                     |       dict_values (64 B)
00000035                                                                     |         header (2 B)
00000035  04                                                .                |           encoding: 0x04 logical=None physical=WithLen
                                                                             |             └ bit 7 = 0 -> has_explicit_count = false -> a blob's byte length is its value count
                                                                             |             └ bits 6-4 = 000 -> logical = None, numbered for a v2 byte blob
                                                                             |             └ bits 3-2 = 01 -> physical = WithLen
                                                                             |             └ bits 1-0 = 00 -> extension = 0
00000036  3e                                                >                |           byte_length: 62
00000037  41 41 41 41 41 41 41 41 41 41 41 41 41 41 41 41   AAAAAAAAAAAAAAAA |         data [Data(Single) Int(None)/None, 62 values, 62 B]
00000047  41 41 41 41 41 41 41 41 41 41 41 41 41 41 30 41   AAAAAAAAAAAAAA0A | 
00000057  41 41 41 41 41 41 41 41 41 41 41 41 41 41 41 41   AAAAAAAAAAAAAAAA | 
00000067  41 41 41 41 41 41 41 41 41 41 41 41 41 31         AAAAAAAAAAAAA1   | 
                                                                             |           decoded: utf-8 "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1"
