rust/mlt-core/tests/snapshots/tag02_roundtrip__strings__fsst_column_layout.snap
---
source: mlt-core/tests/tag02_roundtrip.rs
expression: dump_text(&l.encode(cfg_v2()).unwrap())
---
00000000                                                                     | layer[0] (624 B)
00000000  ee 04                                             ..               |   size: 622 (varint) - tag + body
00000002  02                                                .                |   tag: 0x02 -> Tag02
00000003  0a 74 65 73 74 5f 6c 61 79 65 72                  .test_layer      |   name: "test_layer"
0000000e  80 20                                             .                |   extent: 4096
00000010  05                                                .                |   feature_count: 5
00000011  00                                                .                |   layout: 0x00 Points
                                                                             |     └ bit 7 = 0 -> reserved = 0
                                                                             |     └ bits 6-4 = 000 -> shared presence bitfields = 0
                                                                             |     └ bits 3-0 = 0000 -> geometry layout = Points
00000012                                                                     |   geometry (17 B)
00000012                                                                     |     types (4 B)
00000012                                                                     |       header (2 B)
00000012  30                                                0                |         encoding: 0x30 logical=DeltaRle physical=implied
                                                                             |           └ bit 7 = 0 -> has_explicit_count = false -> 5 values from context
                                                                             |           └ bits 6-4 = 011 -> logical = DeltaRle, numbered for a v2 integer stream
                                                                             |           └ bits 3-2 = 00 -> physical = implied
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000013  02                                                .                |         byte_length: 2
00000014  05 00                                             ..               |       data [Length(VarBinary) Int(DeltaRle(Interleaved { num_rle_values: 5 }))/VarInt, 5 values, 2 B]
                                                                             |         decoded: [0, 0, 0, 0, 0]
00000016                                                                     |     vertices (13 B)
00000016                                                                     |       header (3 B)
00000016  a8                                                .                |         encoding: 0xA8 logical=CwDelta physical=VarInt
                                                                             |           └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |           └ bits 6-4 = 010 -> logical = CwDelta, numbered for a v2 vertex stream
                                                                             |           └ bits 3-2 = 10 -> physical = VarInt
                                                                             |           └ bits 1-0 = 00 -> extension = 0
00000017  0a                                                .                |         num_values: 10
00000018  0a                                                .                |         byte_length: 10
00000019  00 00 02 00 02 00 02 00 02 00                     ..........       |       data [Data(Vertex) Vertex(ComponentwiseDelta)/VarInt, 10 values, 10 B]
                                                                             |         decoded: [0, 0, 1, 0, 2, 0, 3, 0, 4, 0]
00000023  01                                                .                |   column_count: 1
00000024                                                                     |   columns (588 B)
00000024                                                                     |     column[0] Str "v" (588 B)
00000024  0b                                                .                |       type: 0x0B AllPresent Str
                                                                             |         └ bits 7-4 = 0000 -> presence = AllPresent
                                                                             |         └ bits 3-0 = 1011 -> data type = Str
00000025  01 76                                             .v               |       name: "v"
00000027                                                                     |       lengths (5 B)
00000027                                                                     |         header (2 B)
00000027  22                                                "                |           encoding: 0x22 logical=Rle physical=implied
                                                                             |             └ bit 7 = 0 -> has_explicit_count = false -> 5 values from context
                                                                             |             └ bits 6-4 = 010 -> logical = Rle, numbered for a v2 string column
                                                                             |             └ bits 3-2 = 00 -> physical = implied
                                                                             |             └ bits 1-0 = 10 -> string layout = Fsst
00000028  03                                                .                |           byte_length: 3
00000029  05 80 04                                          ...              |         data [Length(Dictionary) Int(Rle(Interleaved { num_rle_values: 5 }))/VarInt, 5 values, 3 B]
                                                                             |           decoded: [512, 512, 512, 512, 512]
0000002c                                                                     |       symbol_lengths (11 B)
0000002c                                                                     |         header (3 B)
0000002c  a0                                                .                |           encoding: 0xA0 logical=Rle physical=implied
                                                                             |             └ bit 7 = 1 -> has_explicit_count = true -> a num_values varint follows
                                                                             |             └ bits 6-4 = 010 -> logical = Rle, numbered for a v2 integer stream
                                                                             |             └ bits 3-2 = 00 -> physical = implied
                                                                             |             └ bits 1-0 = 00 -> extension = 0
0000002d  1a                                                .                |           num_values: 26
0000002e  08                                                .                |           byte_length: 8
0000002f  01 02 01 06 0c 08 0c 01                           ........         |         data [Length(Symbol) Int(Rle(Interleaved { num_rle_values: 26 }))/VarInt, 26 values, 8 B]
                                                                             |           decoded: [2, 6, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
00000037                                                                     |       symbol_table (118 B)
00000037                                                                     |         header (2 B)
00000037  04                                                .                |           encoding: 0x04 logical=None physical=WithLen
                                                                             |             └ bit 7 = 0 -> has_explicit_count = false -> a blob's byte length is its value count
                                                                             |             └ bits 6-4 = 000 -> logical = None, numbered for a v2 byte blob
                                                                             |             └ bits 3-2 = 01 -> physical = WithLen
                                                                             |             └ bits 1-0 = 00 -> extension = 0
00000038  74                                                t                |           byte_length: 116
00000039  62 5f 63 5f 72 65 73 69 6e 74 69 61 6c 5f 7a 6f   b_c_resintial_zo |         data [Data(Fsst) Int(None)/None, 116 values, 116 B]
00000049  6e 65 5f 6e 6f 72 74 68 5f 73 65 63 74 6f 72 5f   ne_north_sector_ | 
00000059  6f 6e 65 5f 6e 6f 72 74 61 5f 72 65 73 69 64 65   one_norta_reside | 
00000069  64 5f 72 65 73 69 64 65 65 6e 74 69 61 6c 5f 7a   d_resideential_z | 
00000079  65 5f 72 65 73 69 64 65 69 64 65 6e 74 69 61 6c   e_resideidential | 
00000089  5f 7a 6f 6e 65 5f 6e 6f 72 74 68 5f 73 65 63 74   _zone_north_sect | 
00000099  68 5f 73 65 63 74 6f 72 5f 6e 65 72 64 6f 63 61   h_sector_nerdoca | 
000000a9  68 62 73 69                                       hbsi             | 
                                                                             |           decoded: utf-8 "b_c_resintial_zone_north_sector_one_norta_resided_resideential_ze_resideidential_zone_north_secth_sector_nerdocahbsi"
000000ad                                                                     |       corpus (451 B)
000000ad                                                                     |         header (3 B)
000000ad  04                                                .                |           encoding: 0x04 logical=None physical=WithLen
                                                                             |             └ bit 7 = 0 -> has_explicit_count = false -> a blob's byte length is its value count
                                                                             |             └ bits 6-4 = 000 -> logical = None, numbered for a v2 byte blob
                                                                             |             └ bits 3-2 = 01 -> physical = WithLen
                                                                             |             └ bits 1-0 = 00 -> extension = 0
000000ae  c0 03                                             ..               |           byte_length: 448
000000b0  06 02 03 04 06 02 03 04 06 02 03 04 06 02 03 04   ................ |         data [Data(Single) Int(None)/None, 448 values, 448 B]
000000c0  06 02 03 04 06 02 03 04 06 02 03 04 06 02 03 04   ................ | 
000000d0  06 02 03 04 06 02 03 04 06 02 03 04 06 02 03 04   ................ | 
000000e0  06 02 03 04 06 02 03 04 06 02 03 04 06 02 03 04   ................ | 
000000f0  00 11 10 18 0a 0b 0c 13 11 0e 00 11 10 18 0a 0b   ................ | 
00000100  0c 13 11 0e 00 11 10 18 0a 0b 0c 13 11 0e 00 11   ................ | 
00000110  10 18 0a 0b 0c 13 11 0e 00 11 10 18 0a 0b 0c 13   ................ | 
00000120  11 0e 00 11 10 18 0a 0b 0c 13 11 0e 00 11 10 18   ................ | 
00000130  0a 0b 0c 13 11 0e 00 11 10 18 0a 0b 0c 13 11 0e   ................ | 
00000140  00 11 10 18 0a 0b 0c 13 11 0e 00 11 10 18 0a 0b   ................ | 
00000150  0c 13 11 0e 00 11 10 18 0a 0b 0c 13 11 0e 00 11   ................ | 
00000160  10 18 0a 0b 0c 13 11 0e 00 11 10 18 0a 0b 0c 13   ................ | 
00000170  11 0e 00 11 10 18 0a 0b 0c 13 11 0e 00 11 10 18   ................ | 
00000180  0a 0b 0c 13 11 0e 00 11 10 18 0a 0b 0c 13 11 0e   ................ | 
00000190  01 12 08 05 0d 0e 01 12 08 05 0d 0e 01 12 08 05   ................ | 
000001a0  0d 0e 01 12 08 05 0d 0e 01 12 08 05 0d 0e 01 12   ................ | 
                                                                             |           … 192 more bytes omitted (--max-blob to change)
                                                                             |           decoded: utf-8 "\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\u{6}\u{2}\u{3}\u{4}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}\u{c}\u{13}\u{11}\u{e}\0\u{11}\u{10}\u{18}\n\u{b}…"
